--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-multi-carousel": "^2.8.5",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
