--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.26.1",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
