--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-multi-carousel": "^2.8.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
